added speed change

--- a/aircontroller/aircontroller.html
+++ b/aircontroller/aircontroller.html
@@ -385,7 +385,7 @@ body {
   <!-- radar -->
   <div id='radar'>
     <div id='score' class='uns'>Score:<span>0</span></div>
-    <div id='test' class='uns'></div><div id='test2' class='uns'></div>
+    <div id='test' class='uns' style='cursor:pointer'>x1</div><div id='test2' class='uns'></div>
     <div id='planerunb' class='runb'><div id='planepad' class='chevs'><div class='chev'><div class='before'></div><div class='after'></div></div><div id='planedock' class='chev dock'><div class='before'></div><div class='after'></div></div></div></div>
     <div id='jetrunb' class='runb'><div id='jetpad' class='chevs'><div class='chev'><div class='before'></div><div class='after'></div></div><div id='jetdock' class='chev dock'><div class='before'></div><div class='after'></div></div></div></div>
     <div id='planerun' class='run'><div class='lines'></div></div>
