--- a/aircontroller/aircontroller.html
+++ b/aircontroller/aircontroller.html
@@ -184,6 +184,9 @@ body {
   display:flex;
   align-items:flex-start;
 }
+#test2 {
+  font-size:15pt;
+}
 .tb span {
   display:inline-block;
   padding:0 10px;
