--- a/aircontroller/aircontroller.html
+++ b/aircontroller/aircontroller.html
@@ -422,7 +422,7 @@ body {
     <div class='chopper blueprint'>
       <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="50px" height="50px" x="0px" y="0px"
       viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
-        <path style="fill:#FBA026;" d="M501.337,185.758l-40.583,86.487c-7.443,15.866-23.395,26.007-40.924,26.007H329.13l-11.036,33.492
+        <path style="fill:rgb(134, 231, 255);" d="M501.337,185.758l-40.583,86.487c-7.443,15.866-23.395,26.007-40.924,26.007H329.13l-11.036,33.492
         c-6.558,19.94-25.186,33.418-46.181,33.418H126.534c-26.508,0-50.5-10.738-67.859-28.108
         c-14.214-14.214-23.981-32.853-27.063-53.677h160.222l54.744-110.148h31.776c28.044,0,50.777,22.733,50.777,50.788v13.457h91.424
         l24.269-51.715L501.337,185.758L501.337,185.758z"/>
