--- a/aircontroller/aircontroller.html
+++ b/aircontroller/aircontroller.html
@@ -146,6 +146,7 @@ body {
 .glow {
   border-radius:50%;
   background-color:#bbb;
+  color:#99a7cf;
   animation:glowing 1s ease-in-out infinite alternate;
 }
 @keyframes glowing {
